# terminal_sql

./: .gitignore  Cargo.toml  LICENSE  README.md
data/: data.csv  data.json  data.parquet  data_3.json
src/: file_io.rs  lib.rs  main.rs  query.rs  utils.rs
tests/: integration_tests.rs
